# HyperBench

./: LICENSE  README.md  pyproject.toml
cli/: cli_README.md  run_demo.py
cli/configs/: config_explicit_degradation_specs.json  config_explicit_degradation_specs.yaml  config_sweep.yaml
docs/: adapters.md  api-reference.md  cli.md  config-files.md  core-concepts.md  degradations.md  index.md  io.md  metrics.md  model-integration.md  pipeline-interface.md  quickstart.md  visualization.md
examples/: examples_README.md
examples/SpectraLift/: spectralift_config_explicit_degradations.yaml  spectralift_hyperbench_integration.ipynb  spectralift_hyperbench_pipeline.py  spectralift_sweep_config.yaml
examples/SpectraLift/outputs/: SpectraLift_jupyter_exact_degradations.csv  SpectraLift_jupyter_sweep_results.csv  SpectraLift_python_explicit_deg_results.csv  SpectraLift_python_sweep_results.csv
examples/SpectraMorph/: spectramorph_config_explicit_degradations.yaml  spectramorph_hyperbench_integration.ipynb  spectramorph_hyperbench_pipeline.py  spectramorph_sweep_config.yaml
examples/SpectraMorph/outputs/: SpectraMorph_jupyter_exact_degradations.csv  SpectraMorph_jupyter_sweep_results.csv  SpectraMorph_python_explicit_deg_results.csv  (+1 more)
notebooks/: 01_hyperbench_quickstart.ipynb  02_loading_and_visualization.ipynb  04_metrics_and_evaluation.ipynb  05_model_interface_and_adapters_final.ipynb  06_framework_conversion_tutorial.ipynb  07_end_to_end_benchmark_pipeline.ipynb  summary.md
src/hyperbench/: __about__.py  __init__.py  cli.py  config.py  exceptions.py  types.py
src/hyperbench/io/: loaders.py  (+2 more)
(+26 files in other folders)
